@@ -18,6 +18,14 @@ collection.find_series_by_collection_id = \
         , s.quantity \
         , s.perforated \
         , cs.number_of_stamps \
+        , ( \
+             SELECT si.image_id \
+               FROM series_images si \
+              WHERE si.series_id = s.id \
+                AND si.hidden = FALSE \
+           ORDER BY si.image_id \
+              LIMIT 1 \
+          ) AS preview_id \
      FROM collections_series cs \
      JOIN series s \
        ON s.id = cs.series_id \
