@@ -12,20 +12,26 @@ Add a series to user's collection (all stamps)
 	Element Text Should Be    id:series-status-msg  You don't have this series. Add one instance:
 	Element Text Should Be    id:number-of-stamps-block  I have 2 out of 2 stamps
 	Submit Form               id:add-series-form
-	Page Should Contain Link  css:[href="/series/2"]
+	Page Should Contain Link  css:.image-gallery figcaption [href="/series/2"]
 	# See https://developer.mozilla.org/en-US/docs/Web/CSS/General_sibling_combinator
-	Element Text Should Be    css:[href="/series/2"] ~ .label-success  New
+	Element Text Should Be    css:.image-gallery figcaption [href="/series/2"] ~ .label-success  New
 
 Add the same series to user's collection again (incomplete series)
 	Go To                       ${SITE_URL}/series/2
 	Element Text Should Be      id:series-status-msg  You already have this series. Add another one instance:
 	Input Text                  id:number-of-stamps  1
 	Submit Form                 id:add-series-form
-	Xpath Should Match X Times  xpath://a[@href="/series/2"]  2
-	Xpath Should Match X Times  xpath://a[@href="/series/2"]/following-sibling::*[contains(concat(" ", normalize-space(@class), " "), " label-success ")]  1
-	Element Text Should Be      css:[href="/series/2"] ~ .label-success  New
+	# See https://stackoverflow.com/questions/1604471/how-can-i-find-an-element-by-css-class-with-xpath
+	${linkXpath}=               Catenate  SEPARATOR=
+	...                         //*[contains(concat(" ", normalize-space(@class), " "), " image-gallery ")]
+	...                         //figcaption
+	...                         //a[@href="/series/2"]
+	${successLabelElem}=        Set Variable  *[contains(concat(" ", normalize-space(@class), " "), " label-success ")]
+	Xpath Should Match X Times  xpath:${linkXpath}  expectedXpathCount=2
+	Xpath Should Match X Times  xpath:${linkXpath}/following-sibling::${successLabelElem}  expectedXpathCount=1
+	Element Text Should Be      css:.image-gallery figcaption [href="/series/2"] ~ .label-success  New
 	# See https://developer.mozilla.org/en-US/docs/Web/CSS/General_sibling_combinator
-	Element Text Should Be      css:[href="/series/2"] ~ .label-default  1 out of 2
+	Element Text Should Be      css:.image-gallery figcaption [href="/series/2"] ~ .label-default  1 out of 2
 
 *** Keywords ***
 Before Test Suite
